--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  <div id="message" style="width: auto; text-align: center; font-weight: bold;">
-    TOC created!
-  </div>
-</body>
-<script src="popup.js" type="text/javascript"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="message" style="width: auto; text-align: center; font-weight: bold;">
+      TOC created!
+    </div>
+  </body>
+  <script src="popup.js" type="text/javascript"></script>
 </html>
