--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="message" style="width: auto; text-align: center; font-weight: bold;">
-      TOC created!
+      Done!
     </div>
   </body>
   <script src="popup.js" type="text/javascript"></script>
